--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  @font-face {
+    font-family: 'Gill Sans';
+    src: local('Gill Sans');
+    font-display: swap;
+  }
+}
+
 html {
   overflow-y: scroll;
   color-scheme: light;
@@ -17,14 +25,14 @@ body {
 }
 
 body {
-  @apply font-sans antialiased;
-  /* other styles */
+  @apply font-sans antialiased text-xl; /* Changed from text-lg to text-xl */
 }
 
 header {
   @apply fixed top-0 left-0 right-0 z-50 py-5;
   @apply bg-stone-100/75 dark:bg-stone-900/25;
   @apply backdrop-blur-sm saturate-200;
+  @apply text-xl; /* Changed from text-lg to text-xl */
 }
 
 main {
@@ -32,12 +40,13 @@ main {
 }
 
 footer {
-  @apply py-5 text-sm;
+  @apply py-5 text-lg; /* Changed from text-base to text-lg */
 }
 
 article {
   @apply max-w-full prose dark:prose-invert prose-img:mx-auto prose-img:my-auto;
   @apply prose-headings:font-semibold;
+  @apply prose-xl; /* Changed from prose-lg to prose-xl */
 }
 
 @layer utilities {
