Change font from 'Gill Sans' to 'Google Sans'

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,8 +4,8 @@
 
 @layer base {
   @font-face {
-    font-family: 'Gill Sans';
-    src: local('Gill Sans');
+    font-family: 'Google Sans';
+    src: local('Google Sans');
     font-display: swap;
   }
 }
